--- a/estilos.scss
+++ b/estilos.scss
@@ -1,4 +1,8 @@
 $color-letras: #f38a8a;
+$color-letras-nosotros: rgb(197, 69, 69);
+$color-boton: rgb(132, 132, 230);
+$color-fondo-productos: rgb(89, 89, 192);
+$color-fondo-contacto: rgb(230, 174, 71);
 
 
 *{
@@ -40,11 +44,7 @@ main{
     background-color: beige;
     
 }
-.imagen{
-    margin: auto;
-   
-  
-}
+
 footer{
     background-color: black;
     color: white;
@@ -86,6 +86,12 @@ footer p{
 }
 .redes a:hover{
     color: blueviolet;
+}
+main h1{
+    color: $color-letras-nosotros;
+}
+.btn{
+    background-color: $color-boton;
 }
 
 
