--- a/estilos.scss
+++ b/estilos.scss
@@ -93,6 +93,13 @@ main h1{
 .btn{
     background-color: $color-boton;
 }
+h2{
+    text-align: center;
+    color: $color-fondo-productos;
+}
+h3{
+    color: $color-fondo-contacto;
+}
 
 
 
