--- a/estilos.scss
+++ b/estilos.scss
@@ -73,6 +73,7 @@ footer{
     margin-left: 5px;
 }
 footer p{
+    color: $color-fondo-productos;
     font-size: 20px;
 }
 .redes{
@@ -152,6 +153,16 @@ main h3{
 .service6 p{
     color: $color-letras-negro;
     font-size: 20px;
+}
+ul li{
+    color: $color-letras;
+}
+li i{
+    color: white;
+}
+footer h2{
+    color: $color-fondo-contacto;
+
 }
 
 
